[gd_scene load_steps=23 format=2]

[ext_resource path="res://Wall1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Keqing.tscn" type="PackedScene" id=2]
[ext_resource path="res://Hori and Miyamura.tscn" type="PackedScene" id=3]
[ext_resource path="res://Candies.tscn" type="PackedScene" id=4]
[ext_resource path="res://Candies1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Candy.tscn" type="PackedScene" id=6]
[ext_resource path="res://Demo2.gd" type="Script" id=7]
[ext_resource path="res://NESCyrillic.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://CandiesSCore2.gd" type="Script" id=9]
[ext_resource path="res://Candies5.gd" type="Script" id=10]
[ext_resource path="res://Candies.gd" type="Script" id=11]
[ext_resource path="res://Enemy2.gd" type="Script" id=12]
[ext_resource path="res://Enemy1.gd" type="Script" id=13]
[ext_resource path="res://Candies3.gd" type="Script" id=14]
[ext_resource path="res://Candies4.gd" type="Script" id=15]
[ext_resource path="res://Candies6.gd" type="Script" id=16]
[ext_resource path="res://Candies2.gd" type="Script" id=17]
[ext_resource path="res://Candy2.tscn" type="PackedScene" id=18]

[sub_resource type="Animation" id=3]
resource_name = "Appearing"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Fading"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 28
outline_size = 2
outline_color = Color( 0.0352941, 0.0352941, 0.0352941, 1 )
font_data = ExtResource( 8 )

[node name="Demo2" type="Node2D"]
script = ExtResource( 7 )

[node name="Wall" parent="." instance=ExtResource( 1 )]

[node name="Keqing" parent="." instance=ExtResource( 2 )]
position = Vector2( 1001, 67 )

[node name="HoriandMiyamura" parent="." instance=ExtResource( 3 )]
position = Vector2( 596, 522 )

[node name="Enemy1" parent="." instance=ExtResource( 3 )]
position = Vector2( 443, 95 )
script = ExtResource( 13 )

[node name="Enemy2" parent="." instance=ExtResource( 3 )]
position = Vector2( 227, 288 )
script = ExtResource( 12 )

[node name="Candies" parent="." instance=ExtResource( 5 )]
position = Vector2( 61, 531 )
script = ExtResource( 11 )

[node name="Candies3" parent="." instance=ExtResource( 5 )]
position = Vector2( 66, 100 )
script = ExtResource( 14 )

[node name="Candies5" parent="." instance=ExtResource( 5 )]
position = Vector2( 597, 275 )
script = ExtResource( 10 )

[node name="Candies2" parent="." instance=ExtResource( 4 )]
position = Vector2( 342, 109 )
script = ExtResource( 17 )

[node name="Candies4" parent="." instance=ExtResource( 4 )]
position = Vector2( 835, 539 )
script = ExtResource( 15 )

[node name="Candies6" parent="." instance=ExtResource( 4 )]
position = Vector2( 343, 535 )
script = ExtResource( 16 )

[node name="Candy" parent="." instance=ExtResource( 6 )]
position = Vector2( 465, 271 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
root_node = NodePath("../ColorRect")
autoplay = "Appearing"
anims/Appearing = SubResource( 3 )
anims/Fading = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="CanvasLayer2"]
margin_left = 37.0
margin_top = 31.0
margin_right = 194.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 4 )
text = "CANDIES: ##"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Candy2" parent="." instance=ExtResource( 18 )]
position = Vector2( 853, 89 )

[connection signal="Difficult" from="." to="Wall" method="_on_Demo2_Difficult"]
[connection signal="gameover" from="HoriandMiyamura" to="." method="_on_HoriandMiyamura_gameover"]
[connection signal="losing" from="HoriandMiyamura" to="Keqing" method="_on_HoriandMiyamura_losing"]
[connection signal="gameover" from="Enemy1" to="." method="_on_HoriandMiyamura_gameover"]
[connection signal="losing" from="Enemy1" to="Keqing" method="_on_Enemy1_losing"]
[connection signal="gameover" from="Enemy2" to="." method="_on_HoriandMiyamura_gameover"]
[connection signal="losing" from="Enemy2" to="Keqing" method="_on_Enemy2_losing"]
[connection signal="change" from="Candy" to="." method="_on_Candy_change"]
[connection signal="change" from="Candy" to="Keqing" method="_on_Candy_change"]
[connection signal="change" from="Candy" to="HoriandMiyamura" method="_on_Candy_change"]
[connection signal="change" from="Candy" to="Enemy1" method="_on_Candy_change"]
[connection signal="change" from="Candy" to="Enemy2" method="_on_Candy_change"]
[connection signal="animation_finished" from="CanvasLayer/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="change" from="Candy2" to="." method="_on_Candy2_change"]
[connection signal="change" from="Candy2" to="Keqing" method="_on_Candy2_change"]
[connection signal="change" from="Candy2" to="HoriandMiyamura" method="_on_Candy2_change"]
[connection signal="change" from="Candy2" to="Enemy1" method="_on_Candy2_change"]
[connection signal="change" from="Candy2" to="Enemy2" method="_on_Candy2_change"]
[connection signal="change" from="Candy2" to="Candy" method="_on_Candy2_change"]
